<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMeetingPlaces</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spltit1">My</string>
    <string name="spltit2">Meeting</string>
    <string name="spltit3">Places</string>
    <string name="splfooter">Copyright@2015Bangladesh</string>
    <string name="reg">Registrer</string>
    <string name="review">Review</string>
    <string name="save">SAVE</string>
    <string name="edit">Edit</string>
    <string name="title">Meeting Places</string>
    <string name="location">Location</string>
    <string name="place">Place Name</string>
    <string name="photo">Take Photo</string>
    <string name="agenda">Meeting Agenda</string>
    <string name="distance">Distance : </string>
    <string name="curloc">Current Location : </string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="descrip">Description</string>
    <string name="home">Home</string>
    <string name="lati">LAT</string>
    <string name="longi">LNG</string>
    <string name="delete">DELETE</string>
    <string name="name">Member</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="to">To </string>
    <string name="cc">Cc</string>
    <string name="sub">Subject</string>
    <string name="msg">Message</string>
    <string name="send">Send</string>
    <string name="emmsg">New Message</string>
    <string name="colon">:</string>
    
    <string name="insert">Data inserted</string>
    <string name="fail">Data insertion failed</string>
    <string name="updatecom">Data Updated</string>
    <string name="updateprob">Data Upgradetion failed</string>
    <string name="form">Please Fillup Correctly</string>
    <string name="phototake">Please Take Photo</string>
    <string name="gps">GPS signal not found</string>
    <string name="deletemsg">Data Deleted</string>
    <string name="camerachack">Sorry! Your device doesn\'t support camera</string>
    <string name="imagecaptured">Image Captured</string>
    <string name="imagecancled">cancelled image capture</string>
    <string name="imagefailed">Sorry! Failed to capture image</string>
    <string name="deletealart">Are You Sure ?</string>
    <string name="latlngnotfound">Latitude And Longitude Not Found.
         Please Check Your GPS or Network Srevice. Or Type Values</string>

</resources>